[package]
name="rust_uno_cli"
version="0.0.1"
readme="README.md"
edition="2018"

[dependencies]
rand="0.8.3"
console = "0.14.1"
dialoguer = "0.8.0"
indicatif = "0.16.0"
tungstenite = "0.13.0"
local_ipaddress = "0.1.3"
serde_json = "1.0.64"
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]